--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@clerk/nextjs": "5.0.0-beta.43",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@vercel/postgres": "^0.8.0",
     "drizzle-orm": "^0.29.4",
+    "install": "^0.13.0",
     "next": "^14.2.1",
+    "npm": "^10.5.2",
     "postgres": "^3.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -42,5 +45,5 @@
   "ct3aMetadata": {
     "initVersion": "7.30.2"
   },
-  "packageManager": "pnpm@8.6.12"
+  "packageManager": "pnpm@9.0.1"
 }
