--- a/package.json
+++ b/package.json
@@ -17,14 +17,19 @@
     "@t3-oss/env-nextjs": "^0.9.2",
     "@uploadthing/react": "^6.4.4",
     "@vercel/postgres": "^0.8.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.4",
     "install": "^0.13.0",
+    "lucide-react": "^0.371.0",
     "next": "^14.2.1",
     "npm": "^10.5.2",
     "postgres": "^3.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.9.0",
     "zod": "^3.22.4"
   },
