--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "install": "^0.13.0",
     "lucide-react": "^0.371.0",
     "next": "^14.2.1",
+    "next-themes": "^0.3.0",
     "npm": "^10.5.2",
     "postgres": "^3.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.9.0",
